# winmgm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.c  uninstall.sh
src/: X11_session.c  X11_session.h  main.c  winmgm.h
